--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,16 @@
-/* General styles for desktop */
-.container {
-	background-image: url('background\\ \(1\).png');
+
+.container{
+    
+	background-image: url('background\ \(1\).png');
 	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+    background-position: center;
+    background-repeat: no-repeat;
 	height: 1093px;
 }
+
+
+
+
 
 header {
 	display: flex;
@@ -71,8 +76,8 @@ header img {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 30px;
-	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	cursor: pointer;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    cursor: pointer;
 }
 
 .down-banner h2 {
@@ -88,62 +93,66 @@ header img {
 	font-weight: bold;
 	color: #C271FF;
 }
-
-.banner-avatar {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	margin-left: 150px;
-	margin-right: 150px;
-	margin-top: 90px;
+.banner-avatar{
+   
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-top: 90px;
 }
+.avatar1 .avatar2 .avatar3 .avatar4{
+    display:flex;
+    flex-direction: column;
 
-.banner-avatar img {
-	width: 150px;
-	border-radius: 50%;
-	height: 150px;
-	margin-left: auto;
-	margin-right: auto;
 }
-
+.banner-avatar img{
+    width: 150px;
+    border-radius: 50%;
+    height: 150px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .banner-avatar h3 {
-	color: #fff;
-	font-family: 'Source sans pro', sans-serif;
-	font-size: 18px;
-	font-weight: bolder;
+    color:#fff;
+    font-family: 'Source sans pro',sans-serif;
+    font-size: 18px;
+    font-weight: bolder;
+}
+.banner-avatar p{
+    color: #666;
+    font-family: 'Source Sans Pro', sans-serif;
+    text-align: center;
+    margin-top: 0px;
 }
 
-.banner-avatar p {
-	color: #666;
-	font-family: 'Source Sans Pro', sans-serif;
-	text-align: center;
-	margin-top: 0px;
-}
-
-.banner-avatar p:hover {
-	color: #C271FF;
-}
+.banner-avatar p:hover{
+    color:#C271FF
+} 
 
 .strip {
 	background-color: #0B192C;
-	height: 100px;
+	height:100px;
 }
-
+  
 .quote {
 	background-color: #C271FF;
 }
+  
 
-.qoute-block {
-	display: flex;
+    
+.qoute-block{
+    display: flex;
 	width: 65%;
 	height: 392px;
 	justify-content: center;
-	margin-left: auto;
-	margin-right: auto;
-	align-items: center;
-	gap: 40px;
-}
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    gap: 40px;
 
+}
 .author-block {
 	display: flex;
 	flex-direction: column;
@@ -153,52 +162,112 @@ header img {
 	text-align: left;
 }
 
-.qoute-block img {
-	width: 160px;
-	height: 160px;
-	border-radius: 50%;
-}
+.qoute-block img{
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+   
 
-.author-block blockquote {
-	margin-left: 0px;
-	margin-bottom: 30px;
 }
+.author-block blockquote{
+    margin-left: 0px;
+    margin-bottom: 30px;
 
-.author-block span {
-	font-weight: bold;
+}
+.author-block span{
+    font-weight: bold;
 	font-style: normal;
 }
-
-.author-block p {
-	font-style: italic;
-	margin-top: 10px;
+.author-block p{
+    font-style: italic;
+    margin-top: 10px;
 }
 
-.vedios-container {
-	display: flex;
+
+.vedios h1{
+    text-align: center;
+    font-weight: lighter;
+    font-size: 32;
+    line-height: 50px;
+    margin-top: 90px;
+}
+.vedios h1 span{
+   font-weight: bold;
+   color: #c271ff
+}
+.vedios-container{
+    display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	margin-left: 60px;
 	margin-right: 75px;
 	font-family: 'Source Sans Pro', sans-serif;
 }
+.video-box-1, .video-box-2, .video-box-3, .video-box-4 {
 
-/* Videos Section */
-.video-box-1,
-.video-box-2,
-.video-box-3,
-.video-box-4 {
-	display: flex;
+    display: flex;
 	flex-direction: column;
 	width: 200px;
 }
+.video-box-1-middle, .video-box-2-middle, .video-box-3-middle, .video-box-4-middle {
+	display: flex;
+	flex-direction: row;
+	justify-content: left;
+	margin-left: 10px;
+	gap: 12px;
+	align-items: center;
+	height: 30px;
+}
 
+.vedios-box-1-bottom, .video-box-2-bottom , .video-box-3-bottom, .video-box-4-bottom{
+    display: flex;
+	flex-direction: row;
+	justify-content: left;
+	margin-left: 10px;
+	gap: 50px;
+	align-items: center;
+}
+[class^="video-box-"] .video-mini {
+	width: 255px;
+	height: 154px;
+}
 .videos-container h2 {
 	font-size: 16px;
 	font-weight: bold;
 	margin-left: 10px;
+	margin-bottom: 0px;
+	margin-top: 20px;
+}
+.videos-container .description {
+	font-size: 14px;;
+	color: #838A94;
+	margin-left: 10px;
+	line-height: 25px;
+	margin-bottom: 15px;
+	margin-top: 10px;
 }
 
+.videos-container h3, .time {
+	font-size: 14px;
+	font-weight: 600;
+	color: #C271FF;
+}
+[class^="video-box-"] img {
+	width: 30px;
+	height: 30px;
+}
+.rating img {
+	width: 15px;
+	height: 15px;
+}
+.rating {
+	display: flex;
+	gap: 10px;
+	margin-top: 5px;
+}
+.video-box-1-middle , .video-box-2-middle, .video-box-3-middle, .video-box-4-middle h3{
+    color:#c271ff
+}
 #membership {
 	background-color: #071629;
 	color: white;
@@ -207,7 +276,102 @@ header img {
 	margin-top: 100px;
 	height: 502px;
 }
+#membership h1{
+	font-size: 32px;
+	font-weight: lighter;
+	text-align: center;
+	margin-bottom: 90px;
+}
 
+#membership h1 span{
+	color: #C271FF;
+	font-weight: bold;
+}
+.membership-container {
+	display: flex;
+	justify-content: center;
+}
+.membership-box {
+	display: flex;
+	flex-direction: column;
+	width: 257px;
+	height: 153px;
+	text-align: center;
+}
+
+.membership-box img {
+	width: 44px;
+	height: 35px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.membership-box h2 {
+	font-size: 18px;
+	font-weight: 600;
+	margin-top: 20px;
+}
+
+.membership-box p {
+	font-size: 14px;
+	line-height: 25px;
+}
+
+#membership button {
+	height: 44px;
+	background-color: #C271FF;
+	border: none;
+	color: white;
+	font-weight: 600;
+	font-size: 14px;
+	border-radius: 24px;
+	width: 200px;
+	margin-left: 450px;
+	margin-top: 90px;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+#FAQ {
+	font-family: 'Source Sans Pro', sans-serif;
+}
+
+#FAQ h1 {
+	font-size: 60px;
+	font-weight: lighter;
+	text-align: center;
+	padding-top: 20px;
+	margin-bottom: 80px;
+}
+
+.FAQ-container {
+	display: flex;
+	flex-direction: column;
+}
+
+.row {
+	display: flex;
+	justify-content: space-around;
+	margin-left: 190px;
+	margin-right: 190px;
+	margin-bottom: 100px;
+}
+
+.item {
+	display: flex;
+	flex-direction: column;
+	width: 350px;
+	height: 242px;
+}
+
+.item h2 {
+	font-size: 16px;
+	font-weight: bold;
+}
+
+.item p {
+	font-size: 14px;
+	color: #838A94;
+	line-height: 25px;
+}
 footer {
 	background-color: #071629;
 	height: 249px;
@@ -222,86 +386,17 @@ footer {
 	padding-top: 100px;
 }
 
-/* Tablet screens (max-width: 768px) */
-@media (max-width: 768px) {
-	header {
-		flex-direction: column;
-		align-items: center;
-		gap: 20px;
-	}
-
-	header img {
-		width: 120px;
-	}
-
-	.header-links {
-		flex-wrap: wrap;
-		gap: 15px;
-	}
-
-	.top-banner h1 {
-		font-size: 60px;
-	}
-
-	.banner-avatar {
-		flex-wrap: wrap;
-		gap: 20px;
-		margin: 20px;
-	}
-
-	.qoute-block {
-		width: 90%;
-	}
-
-	.vedios-container {
-		flex-wrap: wrap;
-		gap: 20px;
-		margin: 10px;
-	}
-
-	.video-box-1,
-	.video-box-2,
-	.video-box-3,
-	.video-box-4 {
-		width: 100%;
-	}
+.logos img{
+	width: 30px;
+	height: 30px;
 }
 
-/* Mobile screens (max-width: 480px) */
-@media (max-width: 480px) {
-	header {
-		gap: 10px;
-	}
+.footer-logo {
+	width: 169px;
+	height: 30px;
+}
 
-	header img {
-		width: 100px;
-	}
-
-	.top-banner h1 {
-		font-size: 40px;
-	}
-
-	.banner-avatar img {
-		width: 80px;
-		height: 80px;
-	}
-
-	.qoute-block {
-		flex-direction: column;
-		width: 100%;
-		padding: 10px;
-	}
-
-	.vedios-container {
-		flex-direction: column;
-		gap: 20px;
-		margin: 0 auto;
-	}
-
-	.video-box-1,
-	.video-box-2,
-	.video-box-3,
-	.video-box-4 {
-		width: 100%;
-	}
+.logos {
+	display: flex;
+	gap: 20px;
 }
