--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 .container{
     
-	background-image: url('background\ \(1\).png');
+	background-image: url(img/background\ \(1\).png);
 	background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
